--- a/style/classContent.css
+++ b/style/classContent.css
@@ -153,7 +153,7 @@
 
 
 /* 소형 스마트폰2 */
-@media screen and (min-width: 481px) and (max-width: 600px) { 
+@media screen and (max-width: 600px) { 
   #classContent .container .contentsWrap .leftItems {
     display: flex;
     flex-direction: column;
@@ -180,7 +180,7 @@
 }
 
 /* 중형 스마트폰 */
-@media screen and (min-width: 601px) and (max-width: 767px) {
+@media screen and (max-width: 769px) {
   #classContent .container .contentsWrap .leftItems {
     display: flex;
     flex-direction: column;
