--- a/style/classType.css
+++ b/style/classType.css
@@ -77,7 +77,7 @@
 }
 
 /* 소형 스마트폰 2 */
-@media screen and (min-width: 481px) and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #classType .container .contentsWrap {
     display: flex;
     flex-direction: column;
