--- a/style/components.css
+++ b/style/components.css
@@ -31,7 +31,7 @@ html, body {
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 #header {
@@ -241,7 +241,7 @@ html, body {
   }
 }
 /* 소형 스마트폰2 */
-@media screen and (min-width: 481px) and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #about, 
   #history, 
   #classType, 
@@ -253,7 +253,7 @@ html, body {
 }
 
 /* 중형 스마트폰 */
-@media screen and (min-width: 601px) and (max-width: 767px) {
+@media screen and (max-width: 769px) {
   #navBar,
   #home,
   #about,
@@ -266,7 +266,7 @@ html, body {
 }
 
 /* 소형 태블릿 */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   #navBar,
   #home,
   #about, 
