--- a/style/history.css
+++ b/style/history.css
@@ -15,31 +15,7 @@
   background-repeat: no-repeat;
 }
 
-/* #history .container .titleWrap {
-  position: relative;
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: flex-start;
-} */
-/* #history .container .titleWrap .titleLine {
-  width: 4px;
-  height: 46px;
-  background-color: #FFBFB5;
-} */
-/* #history .container .titleWrap .titleText {
-  font-size: 42px;
-  font-weight: 700;
-  color: #fff;
-  margin-left: 12px;
-} */
-/* #history .container .titleWrap .titleSubText {
-  font-size: 16px;
-  font-weight: 300;
-  color: #fff;
-  margin-top: 26px;
-  margin-left: 14px;
-} */
+
 #history .container .contentsWrap {
   width: 100%;
   box-sizing: border-box;
@@ -79,14 +55,6 @@
 
 /* 소형 스마트폰1 */
 @media screen and (max-width: 480px) { 
-  /* #history {
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-  } */
-  /* #history .container {
-    padding: 0;
-  } */
   #history .container::after {
     width: 100%;
     height: 350px;
@@ -139,15 +107,7 @@
 }
 
 /* 소형 스마트폰2 */
-@media screen and (min-width: 481px) and (max-width: 600px) {
-  /* #history {
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-  } */
-  /* #history .container {
-    padding: 0;
-  } */
+@media screen and (max-width: 600px) {
   #history .container::after {
     width: 100%;
     height: 350px;
@@ -194,15 +154,7 @@
   }
 }
 /* 중형 스마트폰 */
-@media screen and (min-width: 601px) and (max-width: 767px) {
-  /* #history {
-    padding-left: 40px;
-    padding-right: 40px;
-    box-sizing: border-box;
-  } */
-  /* #history .container {
-    padding: 0;
-  } */
+@media screen and (max-width: 769px) {
   #history .container .contentsWrap {
     width: 100%;
     margin-top: 50px;
