--- a/style/faq.css
+++ b/style/faq.css
@@ -198,10 +198,11 @@
     top: 0;
   }
   #faq #qnaWrap .bgImg {
+    height: 100%;
     display: block;
     position: absolute;
     right: 0;
-    top: 0;
+    top: -1px;
   }
   #faq #qnaWrap .bgImg img {
     display: block;
