--- a/style/home.css
+++ b/style/home.css
@@ -1,4 +1,4 @@
-#home .textWrap {
+#home .container .textWrap {
   width: 510px;
   min-width: 510px;
   position: absolute;
@@ -7,22 +7,22 @@
   float: left;
   z-index: 111;
 }
-#home .textWrap .mainText {
+#home .container .textWrap .mainText {
   font-size: 42px;
   font-weight: 700;
   color: #1E4527;
 }
-#home .textWrap .subText {
+#home .container .textWrap .subText {
   font-size: 20px;
   font-weight: 400;
   color: #222222;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-#home .textWrap .subText span {
+#home .container .textWrap .subText span {
   color: #ED8170;
 }
-#home .textWrap .button {
+#home .container .textWrap .button {
   width: 160px;
   height: 46px;
   font-size: 18px;
@@ -34,14 +34,14 @@
   background-color: #1E4527;
   transition: background-color 0.2s ease, box-shadow 0.2s ease;
 }
-#home .textWrap .button span {
+#home .container .textWrap .button span {
   font-size: 16px;
 }
-#home .textWrap .button:hover {
+#home .container .textWrap .button:hover {
   background-color: #305f3b;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
 }
-#home .imgWrap {
+#home .container .imgWrap {
   width: 509px;
   min-width: 509px;
   height: 556px;
@@ -49,7 +49,7 @@
   float: right;
   box-sizing: border-box;
 }
-#home .imgWrap div:first-child {
+#home .container .imgWrap div:first-child {
   position: absolute;
   left: 0;
   bottom: 14px;
@@ -63,7 +63,7 @@
   background-position: 0 -70px;
   box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.3);
 }
-#home .imgWrap div:last-child {
+#home .container .imgWrap div:last-child {
   position: absolute;
   right: 0;
   top: 0;
@@ -244,7 +244,8 @@
   #home .container .textWrap .subText {
     font-size: 20px;
     font-weight: 400;
-    color: #222222;
+    color: #a25959;;
+    /* color: #222222; */
     margin-top: 20px;
     margin-bottom: 20px;
   }
