--- a/style/history.css
+++ b/style/history.css
@@ -1,6 +1,4 @@
 
-
-
 #history .container::after {
   display: block;
   content: '';
@@ -14,7 +12,6 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-
 
 #history .container .contentsWrap {
   width: 100%;
@@ -34,7 +31,7 @@
   margin-bottom: 10px;
 }
 #history .container .contentsWrap .korTextWrap {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 300;
   color: #fff;
 }
@@ -53,7 +50,78 @@
   color: #27482F;
 }
 
-/* 소형 스마트폰1 */
+
+
+
+/* 769px 이하 화면*/
+@media screen and (max-width: 769px) {
+  #history .container .contentsWrap {
+    display: flex;
+    justify-content: space-between;
+  }
+  #history .container .contentsWrap .itemsTextWrap {
+    width: 47%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  #history .container .contentsWrap .itemsTextWrap .item {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  #history .container .contentsWrap .itemsTextWrap .item:last-child {
+    margin-bottom: 0;
+  }
+  #history .container .contentsWrap .line {
+    display: none;
+  }
+}
+
+
+/* 600px 이하 화면*/
+@media screen and (max-width: 600px) {
+  #history .container::after {
+    width: 100%;
+    height: 350px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  #history .container .contentsWrap {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  #history .container .contentsWrap .itemsTextWrap {
+    width: 90%;
+    margin: 0 auto;
+  }
+  #history .container .contentsWrap .korTextWrap {
+    margin-bottom: 30px;
+  }
+  #history .container .contentsWrap .itemsTextWrap .item {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  #history .container .contentsWrap .itemsTextWrap .item:last-child {
+    margin-bottom: 0;
+  }
+  #history .container .titleWrap .titleText {
+    font-size: 2.4rem;
+  }
+  #history .container .titleWrap .titleSubText {
+    margin-top: 22px;
+  }
+  #history .container .contentsWrap .line {
+    display: none;
+  }
+}
+
+/* 480px 이하 화면*/
 @media screen and (max-width: 480px) { 
   #history .container::after {
     width: 100%;
@@ -84,7 +152,6 @@
     margin: 0 auto;
     flex-direction: column;
     justify-content: flex-start;
-
   }
   #history .container .contentsWrap .itemsTextWrap .item {
     width: 100%;
@@ -100,82 +167,6 @@
   }
   #history .container .titleWrap .titleSubText {
     margin-top: 16px;
-  }
-  #history .container .contentsWrap .line {
-    display: none;
-  }
-}
-
-/* 소형 스마트폰2 */
-@media screen and (max-width: 600px) {
-  #history .container::after {
-    width: 100%;
-    height: 350px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  #history .container .contentsWrap {
-    width: 100%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  #history .container .contentsWrap .itemsTextWrap {
-    position: relative;
-    width: 90%;
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  #history .container .contentsWrap .korTextWrap {
-    margin-bottom: 30px;
-  }
-  #history .container .contentsWrap .itemsTextWrap .item {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 30px;
-  }
-  #history .container .contentsWrap .itemsTextWrap .item:last-child {
-    margin-bottom: 0;
-  }
-  #history .container .titleWrap .titleText {
-    font-size: 36px;
-  }
-  #history .container .titleWrap .titleSubText {
-    margin-top: 22px;
-  }
-  #history .container .contentsWrap .line {
-    display: none;
-  }
-}
-/* 중형 스마트폰 */
-@media screen and (max-width: 769px) {
-  #history .container .contentsWrap {
-    width: 100%;
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
-  }
-  #history .container .contentsWrap .itemsTextWrap {
-    position: relative;
-    width: 47%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  #history .container .contentsWrap .itemsTextWrap .item {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 30px;
-  }
-  #history .container .contentsWrap .itemsTextWrap .item:last-child {
-    margin-bottom: 0;
   }
   #history .container .contentsWrap .line {
     display: none;
