--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,7 @@
 #home .container .textWrap {
-  width: 510px;
-  min-width: 510px;
+  /* width: 510px; */
+  width: 52%;
+  min-width: 500px;
   position: absolute;
   transform: translateY(50%);
   height: auto;
@@ -8,15 +9,17 @@
   z-index: 111;
 }
 #home .container .textWrap .mainText {
-  font-size: 42px;
+  font-size: 2.4rem;
   font-weight: 700;
+  line-height: 1.2;
   color: #1E4527;
 }
 #home .container .textWrap .subText {
-  font-size: 20px;
+  font-size: 1.4rem;
   font-weight: 400;
   color: #222222;
   margin-top: 20px;
+  line-height: 1.2;
   margin-bottom: 20px;
 }
 #home .container .textWrap .subText span {
@@ -25,7 +28,7 @@
 #home .container .textWrap .button {
   width: 160px;
   height: 46px;
-  font-size: 18px;
+  font-size: 1.2rem;
   color: #fff;
   line-height: 42px;
   text-align: center;
@@ -35,7 +38,7 @@
   transition: background-color 0.2s ease, box-shadow 0.2s ease;
 }
 #home .container .textWrap .button span {
-  font-size: 16px;
+  font-size: 1rem;
 }
 #home .container .textWrap .button:hover {
   background-color: #305f3b;
@@ -77,58 +80,123 @@
   box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
-
-
-/* 소형 스마트폰 */
-@media screen and (max-width: 480px) {
-  #header {
+/* 1024px 이하 화면*/
+@media screen and (max-width: 1024px) {
+  #header, #home {
     height: auto;
   }
+  #home .container {
+    margin-top: 50px;
+  }
+  
+  #home .container .textWrap {
+    transform: translateY(22%);
+  }
+  #home .container .imgWrap {
+    width: 360px;
+    min-width: 394px;
+    height: 394px;
+  }
+  #header #home .container .imgWrap div:first-child {
+    width: 188px;
+    height: 188px;
+  }
+  #header #home .container .imgWrap div:last-child {
+    width: 298px;
+    height: 368px;
+  }
+}
+/* 769px 이하 화면*/
+@media screen and (max-width: 769px) {
   #home {
-    height: 760px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  #home .container {
+    height: 466px;
+  }
+  #home .container .textWrap {
+    position: relative;
+    width: 100%;
+    min-width: 100%;
+    top: 0;
+    left: 0;
+    transform: translateY(20%);
+  }
+  #home .container .textWrap .mainText {
+    width: 100%;
+    height: auto;
+    white-space: normal;
+  }
+  #home .container .imgWrap {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 360px;
+    min-width: 394px;
+    height: 394px;
+  }
+  #header #home .container .imgWrap div:first-child {
+    width: 188px;
+    height: 188px;
+  }
+  #header #home .container .imgWrap div:last-child {
+    width: 298px;
+    height: 368px;
+  }
+}
+/* 600px 이하 화면*/
+@media screen and (max-width: 600px) {
+  #home {
     padding-left: 20px;
     padding-right: 20px;
   }
   #home .container {
     width: 90%;
+    height: 600px;
+    padding: 0;
+    margin-top: 60px;
+  }
+  #home .container .textWrap {
+    transform: none;
+  }
+  #home .container .imgWrap {
+    width: 390px;
+    height: 394px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+  }
+  #header #home .container .imgWrap div:first-child {
+    width: 188px;
+    height: 188px;
+  }
+  #header #home .container .imgWrap div:last-child {
+    width: 298px;
+    height: 368px;
+  }
+}
+/* 480px 이하 화면*/
+@media screen and (max-width: 480px) {
+  #home {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  #home .container {
     height: auto;
     margin-top: 60px;
     padding: 0;
   }
-  #home .container .textWrap {
-    position: relative !important;
-    width: 100% !important;
-    min-width: 100% !important;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
-  #home .container .textWrap .mainText {
-    width: 100%;
-    height: auto;
-    font-size: 30px;
-    font-weight: 700;
-    white-space: normal;
-    color: #1E4527;
-  }
-  #home .container .textWrap .subText {
-    font-size: 16px;
-    font-weight: 400;
-    color: #222222;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
   #home .container .imgWrap {
     position: relative;
-    width: 360px;
-    min-width: 360px;
+    width: auto;
+    min-width: 320px;
     height: 340px;
-    margin-top: 20px;
     box-sizing: border-box;
   }
   #header #home .container .imgWrap div:first-child {
     position: absolute;
-    left: 70px;
     width: 168px;
     height: 168px;
   }
@@ -140,161 +208,22 @@
   #home .container .textWrap .button {
     width: 140px;
     height: 40px;
-    font-size: 14px;
-    color: #fff;
-    line-height: 40px;
-    text-align: center;
+    font-size: 0.9rem;
+    line-height: 38px;
     border-radius: 6px;
-    background-color: #1E4527;
     transition: background-color 0.2s ease, box-shadow 0.2s ease;
   }
-  #home .container .textWrap .button span {
-    font-size: 16px;
-  }
 }
 
-
-@media screen and (max-width: 600px) {
-  #header {
-    height: 836px;
-  }
-  #home {
-    height: 836px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  #home .container {
-    width: 90%;
-    height: 600px;
-    padding: 0;
-  }
-  #home .container .textWrap {
-    position: relative !important;
-    width: 100% !important;
-    min-width: 100% !important;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
+/* 380px 이하의 화면에서 적용될 스타일 */
+@media screen and (max-width: 380px) {
   #home .container .textWrap .mainText {
-    width: 100%;
-    height: auto;
-    font-size: 42px;
-    font-weight: 700;
-    white-space: normal;
-    color: #1E4527;
-  }
-  #home .container .textWrap .subText {
-    font-size: 20px;
-    font-weight: 400;
-    color: #222222;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    font-size: 2rem;
   }
   #home .container .imgWrap {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 360px;
-    min-width: 360px;
-    height: 394px;
-  }
-  #header #home .container .imgWrap div:first-child {
-    width: 188px;
-    height: 188px;
-  }
-  #header #home .container .imgWrap div:last-child {
-    width: 298px;
-    height: 368px;
+    width: 100%;
+    min-width: 100%;
+    margin-top: 30px;
   }
 }
 
-/* 중형 스마트폰 */
-@media screen and (max-width: 769px) {
-  #header {
-    height: 700px;
-  }
-  #home {
-    height: 700px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-  #home .container {
-    height: 466px;
-  }
-  #home .container .textWrap {
-    position: relative !important;
-    width: 100% !important;
-    min-width: 100% !important;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
-  #home .container .textWrap .mainText {
-    width: 100%;
-    height: auto;
-    font-size: 42px;
-    font-weight: 700;
-    white-space: normal;
-    color: #1E4527;
-  }
-  #home .container .textWrap .subText {
-    font-size: 20px;
-    font-weight: 400;
-    color: #a25959;;
-    /* color: #222222; */
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  #home .container .imgWrap {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 360px;
-    min-width: 394px;
-    height: 394px;
-  }
-  #header #home .container .imgWrap div:first-child {
-    width: 188px;
-    height: 188px;
-  }
-  #header #home .container .imgWrap div:last-child {
-    width: 298px;
-    height: 368px;
-  }
-}
-
-/* 소형 태블릿 */
-@media screen and (max-width: 1024px) {
-  #header, #home {
-    height: auto;
-  }
-  #home .container {
-    margin-top: 50px;
-  }
-  #home .container .textWrap {
-    width: 510px;
-    min-width: 510px;
-    position: absolute;
-    transform: translateY(30%);
-    height: auto;
-    float: left;
-    z-index: 111;
-  }
-  #home .container .imgWrap {
-    width: 360px;
-    min-width: 394px;
-    height: 394px;
-  }
-  #header #home .container .imgWrap div:first-child {
-    width: 188px;
-    height: 188px;
-  }
-  #header #home .container .imgWrap div:last-child {
-    width: 298px;
-    height: 368px;
-  }
-}
