--- a/style/navBar.css
+++ b/style/navBar.css
@@ -57,8 +57,49 @@
   display: none;
 }
 
-
-/* 중형 스마트폰 */
+/* 1024px 이하 화면*/
+@media screen and (max-width: 1024px) {
+  #navBar .container .logo {
+    position: relative;
+    width: 180px;
+    height: 70px;
+  }
+  #navBar .container .logo a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 70px;
+    text-decoration: none;
+    color: #517C5A;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #fff;
+  }
+  #navBar .menuWrap .menuGroup {
+    display: flex;
+    margin-right: 16px;
+  }
+  #navBar .container .menuWrap .menuGroup li {
+    display: block;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+  #navBar .menuWrap .menuGroup li a {
+    display: block;
+    font-size: 15px;
+    text-decoration: none;
+    color: #fff;
+  }
+  #navBar .menuWrap .naverTalk {
+    width: 116px;
+    height: 42px;
+    background-image: url(../img/naverTalk.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+/* 769px 이하 화면*/
 @media screen and (max-width: 769px) {
   #navBar {
     overflow: initial;
@@ -181,48 +222,16 @@
     background-image: url(../img/menuIcon-7.png);
     transform: scale(0.7) translateX(-4px);
   }
-  
 }
 
-/* 소형 태블릿 */
-@media screen and (max-width: 1024px) {
+/* 소형 스마트폰1 */
+@media screen and (max-width: 480px) {
+  #navBar {
+    padding: 0 10px;
+  }
   #navBar .container .logo {
-    position: relative;
-    width: 180px;
-    height: 70px;
+    width: 140px;
   }
-  #navBar .container .logo a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 70px;
-    text-decoration: none;
-    color: #517C5A;
-    font-size: 20px;
-    font-weight: 700;
-    background-color: #fff;
-  }
-  #navBar .menuWrap .menuGroup {
-    display: flex;
-    margin-right: 16px;
-  }
-  #navBar .container .menuWrap .menuGroup li {
-    display: block;
-    padding-left: 8px;
-    padding-right: 8px;
-  }
-  #navBar .menuWrap .menuGroup li a {
-    display: block;
-    font-size: 15px;
-    text-decoration: none;
-    color: #fff;
-  }
-  #navBar .menuWrap .naverTalk {
-    width: 116px;
-    height: 42px;
-    background-image: url(../img/naverTalk.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  #navBar .container .logo a { font-size: 1rem; }
 }
+
