--- a/style/history.css
+++ b/style/history.css
@@ -1,4 +1,3 @@
-
 #history .container::after {
   display: block;
   content: '';
@@ -12,7 +11,6 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-
 #history .container .contentsWrap {
   width: 100%;
   box-sizing: border-box;
@@ -30,12 +28,13 @@
 #history .container .contentsWrap .itemsTextWrap .item li {
   margin-bottom: 10px;
 }
-#history .container .contentsWrap .korTextWrap {
+#history .container .contentsWrap .korTextWrap,
+#history .container .contentsWrap .engTextWrap {
   font-size: 1rem;
   font-weight: 300;
-  color: #fff;
 }
-
+#history .container .contentsWrap .korTextWrap { color: #fff; }
+#history .container .contentsWrap .engTextWrap { color: #27482F; }
 #history .container .contentsWrap .line { 
   width: 100%;
   height: 2px;
@@ -43,15 +42,6 @@
   margin-bottom: 40px;
   background-color: #3E6346;
 }
-
-#history .container .contentsWrap .engTextWrap {
-  font-size: 16px;
-  font-weight: 300;
-  color: #27482F;
-}
-
-
-
 
 /* 769px 이하 화면*/
 @media screen and (max-width: 769px) {
@@ -61,7 +51,6 @@
   }
   #history .container .contentsWrap .itemsTextWrap {
     width: 47%;
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
   }
@@ -78,7 +67,6 @@
     display: none;
   }
 }
-
 
 /* 600px 이하 화면*/
 @media screen and (max-width: 600px) {
@@ -101,74 +89,18 @@
   #history .container .contentsWrap .korTextWrap {
     margin-bottom: 30px;
   }
-  #history .container .contentsWrap .itemsTextWrap .item {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 30px;
-  }
   #history .container .contentsWrap .itemsTextWrap .item:last-child {
     margin-bottom: 0;
-  }
-  #history .container .titleWrap .titleText {
-    font-size: 2.4rem;
-  }
-  #history .container .titleWrap .titleSubText {
-    margin-top: 22px;
-  }
-  #history .container .contentsWrap .line {
-    display: none;
   }
 }
 
 /* 480px 이하 화면*/
 @media screen and (max-width: 480px) { 
-  #history .container::after {
-    width: 100%;
-    height: 350px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  #history .container .titleWrap .titleLine {
-    height: 36px;
-    margin-top: 2px;
-  }
-  #history .container .titleWrap .titleSubText {
-    margin-left: 8px;
-  }
   #history .container .contentsWrap {
     width: 100%;
     margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  #history .container .contentsWrap .itemsTextWrap {
-    position: relative;
-    width: 90%;
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  #history .container .contentsWrap .itemsTextWrap .item {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 30px;
   }
   #history .container .contentsWrap .engTextWrap .item:last-child {
     margin-bottom: 0;
-  }
-  #history .container .titleWrap .titleText {
-    font-size: 32px;
-  }
-  #history .container .titleWrap .titleSubText {
-    margin-top: 16px;
-  }
-  #history .container .contentsWrap .line {
-    display: none;
   }
 }
