--- a/style/navBar.css
+++ b/style/navBar.css
@@ -1,4 +1,3 @@
-
 #navBar .container .logo {
   position: relative;
   width: 238px;
@@ -48,7 +47,6 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 #navBar .menuWrap #toggleBtn {
   display: none;
   cursor: pointer;
@@ -99,6 +97,7 @@
     background-size: cover;
   }
 }
+
 /* 769px 이하 화면*/
 @media screen and (max-width: 769px) {
   #navBar {
@@ -224,11 +223,8 @@
   }
 }
 
-/* 소형 스마트폰1 */
+/* 480px 이하 화면*/
 @media screen and (max-width: 480px) {
-  #navBar {
-    padding: 0 10px;
-  }
   #navBar .container .logo {
     width: 140px;
   }
