--- a/style/classType.css
+++ b/style/classType.css
@@ -66,7 +66,7 @@
     height: 180px;
   }
   #classType .container .contentsWrap .listItems li:nth-child(2) {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
   #classType .container .contentsWrap .listItems li:nth-child(3) {
     font-size: 1.4rem;
@@ -104,6 +104,12 @@
     display: block;
     box-sizing: border-box;
   }
+  #classType .container .contentsWrap .listItems li:nth-child(2) {
+    font-size: 1.6rem;
+  }
+  #classType .container .contentsWrap .listItems li:nth-child(3) {
+    font-size: 1.1rem;
+}
 }
 
 /* 380px 이하 화면*/
