--- a/style/footer.css
+++ b/style/footer.css
@@ -39,7 +39,6 @@
 #footer .leftContentsWrap .textGroup span:not(:last-child) {
   margin-bottom: 4px;
 }
-
 #footer .rightContentsWrap {
 	width: 60%;
   display: flex;
@@ -64,9 +63,40 @@
   color: #1E4527;
 }
 
-
-/* 중형 스마트폰 */
+/* 769px 이하 화면*/
 @media screen and (max-width: 769px) {
+  #footer .container {
+    justify-content: flex-start;
+    flex-direction: column-reverse;
+  }
+  #footer .rightContentsWrap {
+    width: 100%;
+    justify-content: center;
+  }
+  #footer .leftContentsWrap {
+    width: 100%;
+    align-items: center;
+    margin-top: 36px;
+  }
+  #footer .leftContentsWrap .textGroup span {
+    text-align: center;
+  }
+}
 
-
+/* 480px 이하 화면*/
+@media screen and (max-width: 480px) {
+  #footer .rightContentsWrap .menuGroup {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  #footer .rightContentsWrap .menuGroup li {
+    width: 33.333%;
+    text-align: center;
+  }
+  #footer .rightContentsWrap .menuGroup li:nth-child(-n+3) {
+    margin-bottom: 14px;
+  }
+  #footer .rightContentsWrap .menuGroup li:not(:last-child) a {
+    margin: 0;
+  }
 }
